--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #000000;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -14,18 +16,31 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #000000;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  font-family:courier;
+  color: rgb(0, 139, 30);
+}
+
+.App-body {
+  background-color: #000000;
+  /* min-height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: centercentercenter;
+  font-size: calc(10px + 2vmin);
+  font-family:courier;
+  color: rgb(0, 139, 30);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #004558;
 }
 
 @keyframes App-logo-spin {
