--- a/src/App/App.css
+++ b/src/App/App.css
@@ -33,10 +33,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: centercentercenter;
+  justify-content: center;
   font-size: calc(10px + 2vmin);
   font-family:courier;
-  color: rgb(0, 139, 30);
+  color: rgb(0, 255, 55);
 }
 
 .App-link {
